--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,61 @@
     padding: 0;
     font-family: 'Work Sans', sans-serif;
 }
+
+/* -------------------Global CSS Ends Here------------------------ */
+
+.header-container{
+    text-align: right;
+    background: url("../pic/header_bg2.png");
+    background-repeat: no-repeat;
+    background-size: cover; 
+    padding-top: 304px;
+    padding-bottom: 206px;
+    
+}
+header .text-container{
+    margin-right: 230px;
+}
+header .header-h{
+    font-size: 65px;
+    font-weight: 700;
+    line-height: 76px;
+    text-align: right;
+    margin-bottom: 24px;
+}
+header .header-p{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    text-align: right;
+    margin-bottom: 32px;
+}
+header .header_contact_btn{
+    padding: 20px 25px;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 23px;
+    background-color: #F15B22;
+    color: whitesmoke;
+    border: none;
+    border-radius: 7px;
+    
+}
+header .header_contact_btn:hover{
+    background-color: whitesmoke;
+    color: #F15B22;
+    border: 1px solid #F15B22;
+    border-radius: 7px;
+}
+header .header_contact_btn:focus{
+    background-color: #da4c14;
+    color: whitesmoke;
+    border: none;
+    border-radius: 7px;
+}
+main .failure-container{
+    margin-left: 206px;
+    margin-right: 322px;
+    display: flex;
+    justify-content: ;
+}
