failure section complete, my plans started

--- a/css/style.css
+++ b/css/style.css
@@ -55,9 +55,70 @@ header .header_contact_btn:focus{
     border: none;
     border-radius: 7px;
 }
+
+/* -----------------header section ends here--------------- */
+
 main .failure-container{
     margin-left: 206px;
     margin-right: 322px;
     display: flex;
-    justify-content: ;
+    justify-content: center;
+    vertical-align: middle;
+}
+.failure-container .person-pic{
+    height: 723px;
+    width: 569px;
+    margin-top: 160px;
+    padding-right: 127px;
+}
+.failure-container .failure-text{
+    margin-top: 399px;
+    margin-left: 57px;
+}
+.failure-container .failure-heading{
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 47px;
+    margin-bottom: 34px;
+}
+.failure-container .failure-para{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    margin-bottom: 24px;
+}
+.failure-container .check-list{
+    list-style: none;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 26px;
+}
+.failure-container .check-mark{
+    width: 18px;
+    height: 12px;
+    margin-bottom: -2px;
+    margin-right: 14px;
+}
+
+/* ---------------------------Failure Section End Here------------------------------ */
+
+.my-plan-container{
+
+}
+.my-plan-container .my-plan-text{
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 47px;
+    margin-top: 150px;
+    margin-bottom: 60px;
+    text-align: center;
+}
+.my-plan-container > ul{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.my-plan-container .plan-icons{
+    height: 93px;
+    width: 93px;
 }
