--- a/css/style.css
+++ b/css/style.css
@@ -186,9 +186,87 @@ main .failure-container{
 
 .footer-section{
     padding-top: 130px;
-    padding-bottom: 130px;
+    padding-bottom: 100px;
     padding-left: 220px;
     padding-right: 220px;
     background-color: #151414;
     display: flex;
+}
+.footer-section .footer-description-header{
+    font-size: 45px;
+    font-weight: 700;
+    line-height: 53px;
+    color: whitesmoke;
+    margin-bottom: 16px;
+}
+.footer-section .footer-description{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    color: whitesmoke;
+    margin-bottom: 24px;
+    margin-right: 250px;
+}
+.footer-section .contact{
+    list-style: none;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    color: whitesmoke;
+    margin-bottom: 6px;
+}
+.footer-section a{
+    text-decoration: none;
+    color: whitesmoke;
+}
+.footer-section .socials{
+    margin-top: 26px;
+    display: flex;
+    justify-content: flex-start;
+}
+.footer-section .social-icons{
+    list-style: none;
+    margin-right: 18px;
+}
+.footer-section .icons{
+    height: 46px;
+    width: 46px;
+}
+.footer-section .subscribe-header{
+    font-size: 28px;
+    font-weight: 600;
+    line-height: 29px;
+    color: whitesmoke;
+}
+.footer-section .email-input{
+    margin-top: 31px;
+    height: 64px;
+    width: 304px;
+    background-color: #151414;
+    border: 1px solid whitesmoke;
+    border-radius: 8px;
+    color: whitesmoke;
+    padding-left: 21px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 21px;
+}
+.footer-section .sub-btn{
+    color: #F15B22;
+    font-size: 20px;
+    font-weight: 600;
+    padding: 20px 36px;
+    margin-top: 20px;
+    border-radius: 8px;
+    border: none;
+}
+.footer-section .sub-btn:hover{
+    color: whitesmoke;
+    background-color: #F15B22;
+    border: 1px solid whitesmoke;
+}
+.footer-section .sub-btn:focus{
+    color: #F15B22;
+    border: 1px solid #F15B22;
+    background-color: whitesmoke;
 }
