--- a/css/style.css
+++ b/css/style.css
@@ -183,10 +183,10 @@ main .failure-container{
     background-color: aliceblue;
 }
 .goal-container .g-2{
-    background-color: aqua;
+    background-color: antiquewhite;
 }
 .goal-container .g-3{
-    background-color: aquamarine;
+    background-color: azure;
 }
 .goal-container .g-4{
     background-color: beige;
